--- a/a-v2.0/config.conf
+++ b/a-v2.0/config.conf
@@ -2,7 +2,7 @@
 GLOBAL_HOME=/home
 GLOBAL_SHELLS_HOME=$GLOBAL_HOME/shells
 GLOBAL_SOURCECODE_DIR=$GLOBAL_HOME/src
-GLOBAL_DATA_DIR=$GLOBAL_HOME/data
+GLOBAL_BACKUP_DIR=$GLOBAL_HOME/backup
 
 ####NGINX####
 NGINX_CONFIG_DIR=/etc/nginx
@@ -16,12 +16,14 @@ TOMCAT_CONFIG_DIR=/etc/tomcat
 TOMCAT_CONFIG_BACKUP_DIR=/etc/tomcat.bak
 TOMCAT_CONTEXT_FILE=$TOMCAT_CONFIG_DIR/context.xml
 TOMCAT_SERVER_FILE=$TOMCAT_CONFIG_DIR/server.xml
+TOMCAT_HOME=$(cat $TOMCAT_CONFIG_DIR/tomcat.conf | sed -n '/CATALINA_HOME=/'p | sed 's/CATALINA_HOME=//' | sed 's/"//'g)
+
 
 ####MYSQL####
 MYSQL_CONFIG_FILE=/etc/my.cnf
 MYSQL_BAK_CONFIG_FILE=/etc/my.cnf.bak
 MYSQL_DATA_DIR=$(cat $MYSQL_CONFIG_FILE | sed -n '/datadir=/'p | sed 's/datadir=//')
-MYSQL_BACKUP_DIR=$GLOBAL_HOME/backup/mysql
+MYSQL_BACKUP_DIR=$GLOBAL_BACKUP_DIR/mysql
 MYSQL_BACKUP_CMD=$GLOBAL_SHELLS_HOME/mysql_backup.sh
 
 ####ISERVER####
