--- a/a-v2.0/config.conf
+++ b/a-v2.0/config.conf
@@ -27,3 +27,9 @@ MYSQL_BACKUP_DIR=$GLOBAL_BACKUP_DIR/mysql
 MYSQL_BACKUP_CMD=$GLOBAL_SHELLS_HOME/mysql_backup.sh
 
 ####ISERVER####
+IAPI_PROJECT_NAME=i-api
+ISERVER_PROJECT_NAME=i-server
+ISERVER_PAKAGE_NAME=ipetty-server.war
+ISERVER_UPLOAD_DIR=$GLOBAL_HOME/files
+ISERVER_BAKUP_DIR=$GLOBAL_BACKUP_DIR/iserver
+ISERVER_DEPLOY_BAKUP_DIR=$ISERVER_BAKUP_DIR/deploy
