iclinet_install.sh

--- a/a-v2.0/config.conf
+++ b/a-v2.0/config.conf
@@ -3,6 +3,7 @@ GLOBAL_HOME=/home
 GLOBAL_SHELLS_HOME=$GLOBAL_HOME/shells
 GLOBAL_SOURCECODE_DIR=$GLOBAL_HOME/src
 GLOBAL_BACKUP_DIR=$GLOBAL_HOME/backup
+GLOBAL_DOWNLOAD_DIR=$GLOBAL_HOME/download
 
 ####NGINX####
 NGINX_CONFIG_DIR=/etc/nginx
