--- a/a-v2.0/config.conf
+++ b/a-v2.0/config.conf
@@ -34,3 +34,11 @@ ISERVER_PAKAGE_NAME=ipetty-server.war
 ISERVER_UPLOAD_DIR=$GLOBAL_HOME/files
 ISERVER_BAKUP_DIR=$GLOBAL_BACKUP_DIR/iserver
 ISERVER_DEPLOY_BAKUP_DIR=$ISERVER_BAKUP_DIR/deploy
+
+####ICLIENT####
+ICLIENT_PROJECT_NAME=i-client
+ICLIENT_PAKAGE_NAME=i-client-release.apk
+ICLIENT_KEY_STORE_FILE=
+ICLIENT_KEY_STORE_PASSWORD=
+ICLIENT_KEY_ALIAS=
+ICLIENT_KEY_ALIAS_PASSWORD=
