--- a/a-v2.0/config.conf
+++ b/a-v2.0/config.conf
@@ -42,3 +42,6 @@ ICLIENT_KEY_STORE_FILE=
 ICLIENT_KEY_STORE_PASSWORD=
 ICLIENT_KEY_ALIAS=
 ICLIENT_KEY_ALIAS_PASSWORD=
+
+####PROBE####
+PROBE_VER=2.3.3
