--- a/a-v2.0/config.conf
+++ b/a-v2.0/config.conf
@@ -45,3 +45,5 @@ ICLIENT_KEY_ALIAS_PASSWORD=
 
 ####PROBE####
 PROBE_VER=2.3.3
+TOMCAT_USER_FILE=$TOMCAT_CONFIG_DIR/tomcat-users.xml
+TOMCAT_USER_BACKUP_FILE= $TOMCAT_CONFIG_DIR/tomcat-users.xml.bak
