--- a/a-v2.0/config.conf
+++ b/a-v2.0/config.conf
@@ -38,10 +38,8 @@ ISERVER_DEPLOY_BAKUP_DIR=$ISERVER_BAKUP_DIR/deploy
 ####ICLIENT####
 ICLIENT_PROJECT_NAME=i-client
 ICLIENT_PAKAGE_NAME=i-client-release.apk
-ICLIENT_KEY_STORE_FILE=
-ICLIENT_KEY_STORE_PASSWORD=
-ICLIENT_KEY_ALIAS=
-ICLIENT_KEY_ALIAS_PASSWORD=
+ICLIENT_CONFIG_DIR=/etc/iclient
+ICLIENT_CONFIG_FILE=$ICLIENT_CONFIG_DIR/sign.cong
 
 ####PROBE####
 PROBE_VER=2.3.3
